Modify package.json for publishing to @swimm org

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tree-sitter-c-sharp",
+  "name": "tree-sitter-razor-csharp",
   "version": "0.20.0",
-  "description": "C# grammar for tree-sitter",
+  "description": "C# Razor grammar for tree-sitter",
   "main": "bindings/node",
   "keywords": [
     "parser",
@@ -10,7 +10,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/tree-sitter/tree-sitter-c-sharp.git"
+    "url": "https://github.com/swimmio/tree-sitter-razor-csharp.git"
   },
   "author": "The Tree-Sitter C# Team",
   "license": "MIT",
